--- a/app/views/vans/_form.html.erb
+++ b/app/views/vans/_form.html.erb
@@ -3,14 +3,17 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :fuel, prompt: "Select a fuel type", collection: Van::CATEGORIES %>
-    <%= f.input :model, placeholder: "Roadsurfer, Volkswagen Crafter..." %>
-    <%= f.input :price, label: "Daily price (in €)", placeholder: "Indicate your price per day", input_html: { min: 0 } %>
-    <%= f.input :surface, label: "Surface (in m²)", placeholder: "Indicate the surface" %>
+    <%= f.input :fuel, label: "Type de voiture", prompt: "Choisir un type de van", collection: Van::CATEGORIES %>
+    <%= f.input :model, label: "Modèle de van", placeholder: "Roadsurfer, Volkswagen Crafter..." %>
+    <%= f.input :price, label: "Prix journalier en €", placeholder: "Indiquer le prix par jour", input_html: { min: 0 } %>
+    <%= f.input :surface, label: "Surface (en m²)", placeholder: "Indiquer la surface du van" %>
     <%= f.input :photo, as: :file %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary mb-1"%>
+  <%= f.button :submit, value: "Créer mon van", class: "ms-2 btn btn-flat   "%>
+
+  <div class="form-actions d-flex form-actions justify-content-start" style="margin-top: 80px">
+    <%= link_to "Retour", vans_path, class: "btn btn-secondary py-2 rounded-3 me-1" %>
+
   </div>
 <% end %>
