--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -24,6 +24,6 @@ controller: 'flatpickr'
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary mb-1"%>
+    <%= f.button :submit, "Reserver ce van", class: "btn btn-flat mb-1"%>
   </div>
 <% end %>
