--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -9,10 +9,10 @@
         <% else %>
           <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" class="van-img img-fluid rounded resize">
         <% end %>
-          <p><strong>Fuel:</strong> <%= @van.fuel %></p>
-          <p><strong>Price:</strong> <%= @van.price %>€ per day</p>
+          <p><strong>carburant:</strong> <%= @van.fuel %></p>
+          <p><strong>Prix:</strong> <%= @van.price %>€ par jour</p>
           <% if @van.surface? %>
-            <p><strong>Surface:</strong> <%= @van.surface %>㎡</p>
+            <p><strong>Superficie:</strong> <%= @van.surface %>㎡</p>
           <% end %>
       </div>
       <div class="col-md-6 d-flex ">
