--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,11 @@
 .alert {
   position: fixed;
-  bottom: 16px;
+  top: 70px;
   right: 16px;
   z-index: 1000;
+  background-color:rgba(255, 255, 255, 0.5);
+  color:rgb(0, 79, 38);
+  border-radius: 20px;
+  box-shadow: 0px 5px 7px 5px #D5D5D5;
+  border: 2px solid grey;
 }
