--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,7 +3,7 @@
   top: 70px;
   right: 16px;
   z-index: 1000;
-  background-color:rgba(255, 255, 255, 0.5);
+  background-color:rgb(255, 255, 255);
   color:rgb(0, 79, 38);
   border-radius: 20px;
   box-shadow: 0px 5px 7px 5px #D5D5D5;
