--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -6,6 +6,6 @@
   background-color:rgb(255, 255, 255);
   color:rgb(0, 79, 38);
   border-radius: 20px;
-  box-shadow: 0px 5px 7px 5px #D5D5D5;
+  box-shadow: 0px 5px 7px 5px #d5d5d565;
   border: 2px solid grey;
 }
