--- a/app/assets/stylesheets/components/_card_dashboard.scss
+++ b/app/assets/stylesheets/components/_card_dashboard.scss
@@ -43,3 +43,41 @@
   margin-bottom: 0;
   margin-top: 8px;
 }
+
+.status {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.button-status {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 10px; /* Ajoutez un espacement au-dessus des boutons */
+}
+
+.button-status .btn {
+  border-radius: 20px; /* Bordures arrondies */
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Ombre pour un effet 3D */
+  background: linear-gradient(to right, #222121, #2a2a2a); /* Dégradé de couleur */
+  border: none; /* Supprime la bordure par défaut */
+  color: white; /* Couleur du texte */
+  padding: 10px 20px; /* Espacement interne */
+  margin-left: 10px; /* Espacement entre les boutons */
+  transition: transform 0.2s; /* Effet de transition */
+}
+
+.button-status .btn:hover {
+  transform: scale(1.05); /* Agrandit légèrement le bouton au survol */
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+  .button-status .btn {
+    padding: 8px 16px; /* Réduit l'espacement interne sur les petits écrans */
+    font-size: 0.9em; /* Réduit la taille du texte */
+  }
+}
