--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -8,16 +8,18 @@
     <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741188996/jikun-li-Xeg4GZFc1IQ-unsplash_cgoixa.jpg" width="auto" height="auto" class="card-dashboard-img">
   <% end %>
 
-  <div class="container-info d-flex flex-column align-items-start">
+  <div class="container-info d-flex flex-column align-items-start col-4">
     <div class="title-dash"><%= booking.van.model %></div>
     <div class="start-date">Date de début : <%= booking.start_date %></div>
     <div class="end-date">Date de fin : <%= booking.end_date %></div>
-    <div>
-      <%= booking.status %>
-      <% if booking.status == 'En attente' && booking_type == "owner" %>
-        <%= button_to 'Accepter', accept_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
-        <%= button_to 'Refuser', reject_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
-      <% end %>
-    </div>
+    <div class="status">Statut : <%= booking.status %></div>
+
+  </div>
+
+  <div class="button-status col-6">
+   <% if booking.status == 'En attente' && booking_type == "owner" %>
+    <%= button_to 'Accepter', accept_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
+    <%= button_to 'Refuser', reject_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
+    <% end %>
   </div>
 </div>
