--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -21,15 +21,18 @@
           <%= render "bookings/form", booking: @booking %>
 
 
-          <div data-controller="toggle" class="mt-5 map-container">
-  <button class="btn btn-flat btn-map" data-action="click->toggle#fire"><span>Voir la carte</span>
-  <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741184289/icons8-carte-30_sx5vze.png" alt="icon-map">
-  </button>
+     <div data-controller="toggle" class="mt-5 map-container">
+      <button class="btn btn-flat btn-map" data-action="click->toggle#fire"><span>Voir la carte</span>
+      <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741184289/icons8-carte-30_sx5vze.png" alt="icon-map">
+      </button>
 
     <div style="height: 200px" id="map-container" data-toggle-target="togglableElement"class="d-none"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+      data-map-show-controls-value="false"
+      data-map-show-popup-value="false"
+      data-map-zoom-map-value="false">
     </div>
       </div>
         </div>
